--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
         cabal: ["3.4"]
-        ghc: ["8.8", "8.10", "9.0", "9.2.5", "9.4.4"]
+        ghc: ["8.8", "8.10", "9.0", "9.2.5"]
         exclude:
           # https://gitlab.haskell.org/ghc/ghc/-/issues/17926
           - os: windows-latest
